logo, menu text

--- a/scss/partials/_colors.scss
+++ b/scss/partials/_colors.scss
@@ -3,8 +3,8 @@
 // Text colours
 
 $white: #ffffff; //white
-$black: #000000; //black
-$slate: #414A52; //body font
+$black: #585858; //black
+$slate: #1b3646; //body font
 $light-slate: #5E6265;
 $light-grey: #F4F6F9; //light section
 $dark-grey: #8A9097;
