--- a/scss/partials/_typography.scss
+++ b/scss/partials/_typography.scss
@@ -1,7 +1,15 @@
 // Typography partial
 @import 'partials/colors'; // Fonts
-$sans-serif: Raleway, Verdana, Arial, sans-serif;
-$serif: Montserrat, Georgia, 'Times New Roman', serif; // Weights
+$sans-serif: Roboto,
+Raleway,
+Verdana,
+Arial,
+sans-serif;
+$serif: Roboto,
+Montserrat,
+Georgia,
+'Times New Roman',
+serif; // Weights
 $light: 300;
 $normal: 400;
 $semibold: 500;
@@ -18,7 +26,7 @@ $crew-h2: 15px;
 $article-h2: 20px;
 $font-size-base: 15px;
 $font-size-footer: 14px;
-$font-size-nav: 13px;
+$font-size-nav: 12px;
 $font-size-search-input: 13px;
 $font-size-tag: 13px;
 $font-size-smalltext: 13px;
@@ -30,71 +38,57 @@ $line-height-article-header: 30px; // Styles
 /* ==========================================================================
 Typography
 ========================================================================== */
-p
-{
+
+p {
     font-size: $font-size-base;
     line-height: $base-line-height;
-
     padding-bottom: 15px;
-
     color: $slate;
 }
-h1
-{
+
+h1 {
     font-size: $font-size-h1;
     font-weight: $light;
     line-height: $line-height-h1;
 }
-h2
-{
+
+h2 {
     font-size: $font-size-h2;
     font-weight: $light;
-
     color: $white;
 }
-h3
-{
+
+h3 {
     font-size: $font-size-h3;
     line-height: 32px;
-
     margin-bottom: 20px;
-
     color: $dark-grey;
 }
-h4
-{
+
+h4 {
     font-size: $font-size-h4;
     font-weight: $bold;
-
     margin: 7px 0 65px 60px;
-
     text-transform: uppercase;
-    &:after
-    {
+    &:after {
         display: block;
-
         width: 30px;
         height: 2px;
         margin-top: 15px;
-
         content: '';
-
         background-color: $teal;
     }
 }
-h5
-{
+
+h5 {
     font-size: $font-size-h5;
     font-weight: $bold;
-
     display: inline-block;
-
     text-transform: uppercase;
-
     color: $slate;
 }
-.bold-italic
-{
+
+.bold-italic {
     font-weight: $bold;
     font-style: $italic;
 }
