--- a/scss/partials/_colors.scss
+++ b/scss/partials/_colors.scss
@@ -1,7 +1,5 @@
 // Colours partial
-
 // Text colours
-
 $white: #ffffff; //white
 $black: #585858; //black
 $slate: #1b3646; //body font
@@ -11,3 +9,4 @@ $dark-grey: #8A9097;
 $teal: #7AE2DE; //cta
 $dark-teal: #71D5D2; //cta-hover
 $porcelain: #E5E7E9; //keylines
+$color-footer: #193240;
