--- a/scss/partials/_colors.scss
+++ b/scss/partials/_colors.scss
@@ -6,7 +6,7 @@ $slate: #1b3646; //body font
 $light-slate: #5E6265;
 $light-grey: #F4F6F9; //light section
 $dark-grey: #8A9097;
-$teal: #7AE2DE; //cta
+$teal: #1b3646; //cta
 $dark-teal: #71D5D2; //cta-hover
 $porcelain: #E5E7E9; //keylines
 $color-footer: #193240;
